# drivedetect

./: CMakeLists.txt  README.md  main.cpp
configs/: adv_camera_setting_1.yaml  adv_camera_setting_2.yaml  camera_setting_1.yaml  camera_setting_2.yaml  video_settings_1.yaml
include/: detection_helper.hpp  frame_config.h  frame_parse.h  linedetector.h  objectdetector.h
src/: CMakeLists.txt  CmakeLists.txt  detection_helper.cpp  frame_config.cpp  frame_parse.cpp  linedetector.cpp  objectdetector.cpp
